# serializer version: 1
# name: TestDCMRefresh.test_refresh_with_fresh_tables
  '''
  ✓ Refreshing dcm project my_project
  0 dynamic table(s) refreshed. 1 dynamic table(s) up-to-date.
  
  '''
# ---
# name: TestDCMRefresh.test_refresh_with_no_dynamic_tables
  '''
  ✓ Refreshing dcm project my_project
  No dynamic tables found in the project.
  
  '''
# ---
# name: TestDCMRefresh.test_refresh_with_outdated_tables
  '''
  ✓ Refreshing dcm project my_project
  1 dynamic table(s) refreshed. 0 dynamic table(s) up-to-date.
  
  '''
# ---
